[package]
authors = ["Safe Exchange Developers <team@safex.io>"]
description = "API implementations to various crypto exchanges and some automated systems"
documentation = "http://safex.io/safex/latest"
homepage = "http://safex.io"
license = "MIT"
name = "tropix"
readme = "README.md"
repository = "https://github.com/safex/tropix"
version = "0.1.0"


[[bin]]
name = "bittrexcli"
path = "apps/bittrex/bittrexcli.rs"

[[bin]]
name = "bittrexautobuy"
path = "apps/bittrex/bittrexautobuy.rs"

[[bin]]
name = "bittrexautosell"
path = "apps/bittrex/bittrexautosell.rs"

[[bin]]
name = "bittrexbuyprice"
path = "apps/bittrex/bittrexautobuyprice.rs"

[[bin]]
name = "poloautobuy"
path = "apps/poloniex/poloautobuy.rs"

[[bin]]
name = "poloautosell"
path = "apps/poloniex/poloautosell.rs"

[[bin]]
name = "polobuysell"
path = "apps/poloniex/buy_v_sell_poloniex.rs"

[[bin]]
name = "polobuyprice"
path = "apps/poloniex/poloautobuyprice.rs"


[lib]
name = "tropix"
path = "src/lib.rs"


[dependencies]
rustc-serialize = "0.3.16"
time = "0.1"
rust-crypto = "^0.2"
curl = "0.2.16"
hyper = "0.7.2"
iron = " 0.3.0"
url = "0.5.7"
